# dkdc

./: .bashrc  .gitignore  .vimrc  .zprofile  AGENTS.md  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  DNS-SETUP.md  DataDrift_Datasets_Preview.ipynb  Dockerfile  LICENSE  PUBLISHING.md  QUICK-REFERENCE.md  README.md  Untitled.ipynb  aml.yml  config.json  config.toml  create_workspaces.py  delete_rgs.py  dev-requirements.txt  dev.py  dev.sh  docker-compose.prod.yaml  docker-compose.yaml  drift-demo.ipynb  eda.py  fun.sh  go.mod  init.sql  job.yaml  justfile  main.go  metadata_backup_20250608_012228.sql.enc  model-drift.ipynb  old_dev.py  poem.md  pyproject.toml  readme.md  (+11 more)
.azureml/: eastus.json  eastus2.json  northcentralus.json  southcentralus.json  uksouth.json  westeurope.json  westus.json  westus2.json
.devcontainer/: .env.example  Dockerfile  README.md  devcontainer.json
.github/workflows/: deploy.yml
.ipynb_checkpoints/: DataDrift_Datasets_Preview-checkpoint.ipynb
Artifacts/how-to-use-azureml-monitor-models-drift-on-aks/: drift-on-aks.ipynb
Artifacts/scripts/: release_fork.ps1  set_index_location.ps1  test_notebooks_config.ps1
Artifacts/wheels/: azureml_contrib_automl_dnn_vision-0.1.0.6188706-py3-none-any.whl  azureml_contrib_functions-0.1.0.6188706-py2.py3-none-any.whl  azureml_contrib_notebook-0.1.0.6188706-py2.py3-none-any.whl  azureml_core-0.1.0.6188706-py2.py3-none-any.whl  azureml_mlflow-0.1.0.6188706-py2.py3-none-any.whl  azureml_pipeline-0.1.0.6188706-py3-none-any.whl  azureml_pipeline_core-0.1.0.6188706-py2.py3-none-any.whl
archive/Artifacts/: execution_report1.txt  sdk-test.userconfig
azure/: cleanup.py
blogs/: asos_dask.md  dask_blog_v1.md
chevron_demos/style-transfer/: testing.ipynb
cmd/: root.go  root_test.go
data/.ipynb_checkpoints/: make-data-checkpoint.ipynb
dev/: README.md  dasky-aks.ipynb
dev/drift/: TabularTimeSeriesAPIsDemo.ipynb  Untitled.ipynb
dev/unilever/: automl.log.1  automl.log.4  make_dataset.ipynb
dkdc/: __init__.py  __main__.py  ai.py  cli.py  common.py  dkdc.py  main.py  math.py  mathai.py  poker.py  resize.py  sql.py  systems.py  testing.py  tools.py  translate.py  utils.py
docs/: GITHUB-ACTIONS-SETUP.md
dotfiles/: .bash_aliases  .gitignore  .tmux.conf  .zshrc  AGENTS.md  README.md  setup.sh
dotfiles/.codex/: AGENTS.md
driftv2/: drift-demo.ipynb  scoring_file_v_1_0_0.py
driftv2/.ipynb_checkpoints/: data-prep-checkpoint.ipynb
labeling/: demo.ipynb
labeling/pytorch_obj_detection/: _torchvision_helper.py  coco_utils.py
mds/: dask.md  unilever.md
mocks/dask/: dask.ipynb
mocks/synapse/: Experiences.ipynb  datasets.ipynb  demo.ipynb  notebook_with_sparkmagic.md  notebooks.md
model_drift/: production-deploy-to-aks.ipynb  score.py  temp.ipynb  temperature_predictor_florida.pkl
model_drift/.ipynb_checkpoints/: production-deploy-to-aks-checkpoint.ipynb  temp-checkpoint.ipynb
nginx/: nginx.conf
nginx/conf.d/: default-http.conf  default-prod.conf  default.conf  ssl-prod.conf.template  ssl.conf.template
old/: aml.yml  config.json
old/test/: model-register-and-deploy.ipynb
older/: README.md  demo.ipynb  runs.ipynb
older/old/: data4ml.json  label.json  mount_test.ipynb  temp.py
pkg/: config.go  config_test.go  logger.go  open.go  open_test.go
prod/: data-drift-backfill.ipynb  get_data.ipynb  release.json
prod/.ipynb_checkpoints/: data-drift-backfill-checkpoint.ipynb  get_data-checkpoint.ipynb
prod/archive/: data-drift-backfill.ipynb  enable-data-collection-for-models-in-aks.ipynb  myenv.yml  score.py
prod/automated-machine-learning/: EnergyData_Complete.xlsx  automl_env_candidate_mac.yml  automl_env_master.yml  automl_env_master_mac.yml  automl_env_preview.yml  automl_env_preview_mac.yml  test_001.auto-ml-classification-numpy.ipynb  test_012.auto-ml-categorical-feature-transformation-test.ipynb  test_013.auto-ml-autoblacklist.ipynb  test_016.auto-ml-datetime-feature-transformer-test.ipynb
prod/azure-arcadia/: release.json
prod/azure-databricks/: release.json
prod/azure-hdi/: automl_hdi_local_classification.ipynb  release.json
prod/deployment/: release.json
prod/explain-model/: release.json
prod/machine-learning-pipelines/: release.json
prod/model_drift/: score.py
prod/training/: release.json
prod/work-with-data/: release.json
py/dkdc/: __init__.py
rs/: ARCHITECTURE.md  Cargo.toml  README.md  pyproject.toml
rs/dkdc-archive/: Cargo.toml
rs/dkdc-archive/src/: lib.rs  main.rs
rs/dkdc-cli/: Cargo.toml  README.md
rs/dkdc-cli/src/: lib.rs  main.rs
rs/dkdc-common/: Cargo.toml
rs/dkdc-common/src/: lib.rs  version.rs
rs/dkdc-config/: Cargo.toml  README.md
rs/dkdc-config/src/: lib.rs
rs/dkdc-dev/: Cargo.toml  README.md
rs/dkdc-dev/src/: lib.rs  main.rs
rs/dkdc-files/: Cargo.toml  README.md
rs/dkdc-files/src/: lib.rs  main.rs
rs/dkdc-lake/: Cargo.toml  README.md
rs/dkdc-lake/src/: archives.rs  files.rs  lib.rs  secrets.rs
rs/dkdc-links/: Cargo.toml  README.md
rs/dkdc-links/src/: config.rs  lib.rs  main.rs  open.rs
rs/dkdc-py/: Cargo.toml  README.md
rs/dkdc-py/src/: lib.rs
rs/dkdc-release/: Cargo.toml
rs/dkdc-release/src/: main.rs
rs/dkdc-secrets/: Cargo.toml
rs/dkdc-secrets/src/: lib.rs
rs/dkdc-test/: Cargo.toml
rs/dkdc-test/src/: main.rs
rs/src/: main.rs  open.rs
rs/src/dkdc_rs/: __init__.py
src/: __init__.py  __main__.py  ai.rs  commands.rs  config.rs  lib.rs  main.py  main.rs  mathai.py  new_main.rs  open.rs  poker.py  sql.py  testing.py  translate.py  utils.rs
src/ai/: endpoints.rs  functions.rs  models.rs  openai.rs
src/commands/: ai.rs  config.rs  image.rs  open.rs  testing.rs
tasks/: 1.md  archive.md  better-config.md  commit.md  config.md  convert-to-rust.md  debian-to-alpine.md  deploy-websites.md  dl-postgres-catalog.md  encryption2.md  fe.md  files-dump.md  files.md  gh-task.md  media.md  monorepo.md  py.md  signage.md  workspace.md  zola-migration.md
temp/: Untitled.ipynb  setup.sh
test/: model-drift.ipynb  myenv.yml  score.py
v2/: job.yml
webdev/: build.sh  setup.sh
websites/: .gitignore
(+657 files in other folders)
