[package]
name = "dkdc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
dotenv = "0.15.0"
image = "0.24.9"
itertools = "0.12.1"
open = "5.1.2"
reqwest = { version = "0.11.25", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tiktoken-rs = "0.5.8"
toml = "0.8.11"
