[package]
name = "dkdc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.30"
futures-util = "0.3.30"
image = "0.24.9"
itertools = "0.12.1"
open = "5.1.2"
reqwest = { version = "0.11.25", features = [
    "blocking",
    "json",
    "json",
    "stream",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tiktoken-rs = "0.5.8"
toml = "0.8.11"

#anyhow = "1.0.71"
#futures-util = "0.3.28"
#reqwest = { version = "0.11.18", features = ["json","stream"] }
#serde = { version = "1.0.163", features = ["derive"] }
#serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
