[project]
name = "dkdc"
version = "0.41.0"
description = "don't know, don't care"
readme = "README.md"
authors = [{ name = "Cody", email = "cody@dkdc.dev" }]
requires-python = ">=3.13"
dependencies = [
    "duckdb==1.3.0",
    "ibis-framework[duckdb,postgres]>=10.5.0",
    "ipython>=9.3.0",
    "panel>=1.7.1",
    "plotly>=6.1.2",
    "rich>=14.0.0",
    "typer>=0.16.0",
    "watchfiles>=1.0.5",
]

[project.scripts]
dkdc = "dkdc.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
