[project]
name = "dkdc"
version = "0.48.0"
description = "don't know, don't care"
readme = "README.md"
authors = [{ name = "Cody", email = "cody@dkdc.dev" }]
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.4",
    "duckdb==1.3.1",
    "fsspec[gcs]>=2023.12.0",
    "ibis-framework[duckdb,sqlite]>=10.6.0",
    "ipython>=9.3.0",
    "panel>=1.7.1",
    "plotly>=6.1.2",
    "pyperclip>=1.9.0",
    "rich>=14.0.0",
    "typer>=0.16.0",
    "watchfiles>=1.0.5",
]

[project.scripts]
dkdc = "dkdc.cli.main:app"

[tool.hatch.build.sources]
"py/dkdc" = "dkdc"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "py/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
