[project]
name = "dkdc"
version = "0.50.0"
description = "don't know, don't care"
readme = "README.md"
authors = [{ name = "Cody", email = "cody@dkdc.dev" }]
requires-python = ">=3.13"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
dkdc = "dkdc.cli.main:main"

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "dkdc._dkdc"
manifest-path = "rs/dkdc-py/Cargo.toml"
python-source = "py"