[workspace]
members = ["dkdc-config", "dkdc-lake", "dkdc-dev", "dkdc-cli", "dkdc-files"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["dkdc contributors"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
duckdb = { version = "1.1", features = ["bundled"] }
chrono = "0.4"
toml = "0.8"
