[workspace]
members = [
    "dkdc-common",
    "dkdc-config", 
    "dkdc-lake",
    "dkdc-dev",
    "dkdc-cli",
    "dkdc-files",
    "dkdc-archive",
    "dkdc-secrets",
    "dkdc-links",
    "dkdc-release",
    "dkdc-test",
]
exclude = ["dkdc-py"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["dkdc contributors"]
repository = "https://github.com/lostmygithubaccount/dkdc"
homepage = "https://github.com/lostmygithubaccount/dkdc"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
duckdb = { version = "1.1", features = ["bundled"] }
chrono = "0.4"
toml = "0.8"
