[package]
name = "dkdc-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for dkdc (don't know, don't care)"
license = "MIT"

[[bin]]
name = "dkdc"
path = "src/main.rs"

[dependencies]
dkdc-config = { path = "../dkdc-config" }
dkdc-lake = { path = "../dkdc-lake" }
dkdc-dev = { path = "../dkdc-dev" }
dkdc-files = { path = "../dkdc-files" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"

[dev-dependencies]
