[package]
name = "dkdc-config"
version = "0.1.0"
edition = "2021"
description = "Configuration management for dkdc (don't know, don't care)"
license = "MIT"
repository = "https://github.com/lostmygithubaccount/dkdc"
homepage = "https://github.com/lostmygithubaccount/dkdc"

[dependencies]
anyhow = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
