[package]
name = "dkdc-dev"
version = "0.1.0"
edition = "2021"
description = "Development REPL functionality for dkdc"
license = "MIT"

[[bin]]
name = "dkdc-dev"
path = "src/main.rs"

[dependencies]
dkdc-config = { path = "../dkdc-config" }
dkdc-lake = { path = "../dkdc-lake" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
