[package]
name = "dkdc-dev"
version = "0.1.0"
edition = "2021"
description = "Development REPL functionality for dkdc"
license = "MIT"
repository = "https://github.com/lostmygithubaccount/dkdc"
homepage = "https://github.com/lostmygithubaccount/dkdc"

[dependencies]
dkdc-config = { version = "0.1.0", path = "../dkdc-config" }
dkdc-lake = { version = "0.1.0", path = "../dkdc-lake" }
anyhow = "1.0"

[dev-dependencies]
