[package]
name = "dkdc-files"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "File management for dkdc virtual filesystem"

[[bin]]
name = "dkdc-files"
path = "src/main.rs"

[dependencies]
dkdc-config = { path = "../dkdc-config" }
dkdc-lake = { path = "../dkdc-lake" }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
