[package]
name = "dkdc-files"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "File management for dkdc virtual filesystem"

[dependencies]
dkdc-config = { version = "0.1.0", path = "../dkdc-config" }
dkdc-lake = { version = "0.1.0", path = "../dkdc-lake" }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tempfile = "3.8"
