[package]
name = "dkdc-links"
version = "0.2.0"
edition = "2021"
authors = ["Cody"]
description = "links in your terminal"
repository = "https://github.com/lostmygithubaccount/dkdc"
license = "MIT"

[[bin]]
name = "dkdc-links"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_toml = "0.0.1"
open = "5.1"
dirs = "5.0"
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
num_cpus = "1.16"
