[package]
name = "dkdc-links"
version = "1.1.4"
edition = "2021"
authors = ["Cody"]
description = "Bookmarks in your terminal"
repository = "https://github.com/lostmygithubaccount/dkdc/tree/main/rs/dkdc-links"
license = "MIT"

[[bin]]
name = "dkdc-links"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
open = "5.1"
anyhow = "1.0"
