[package]
name = "dkdc-release"
version = "0.1.0"
edition = "2021"
description = "Release automation for dkdc"
license = "MIT"
authors = ["dkdc authors"]
repository = "https://github.com/lostmygithubaccount/dkdc"
homepage = "https://github.com/lostmygithubaccount/dkdc"

[[bin]]
name = "dkdc-release"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"